--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <junit.version>4.12</junit.version>
         <maven-compiler.version>3.0</maven-compiler.version>
         <mockito.version>2.0.2-beta</mockito.version>
+        <vertx.version>3.4.1</vertx.version>
     </properties>
 
     <dependencies>
@@ -27,6 +28,13 @@
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
