--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>${vertx.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
